tests/ui/impl-trait/alias-liveness/tait-hidden-erased-unsoundness.stderr
error[E0700]: hidden type for `Tait<'a>` captures lifetime that does not appear in bounds
  --> $DIR/tait-hidden-erased-unsoundness.rs:18:9
   |
LL |     type Tait<'a> = impl Sized + 'a;
   |                     --------------- opaque type defined here
LL |     pub(super) fn step2<'a, 'b: 'a>() -> Tait<'a> {
   |                             -- hidden type `impl Captures<'b> + 'a` captures the lifetime `'b` as defined here
LL |         super::step1::<'a, 'b>()
   |         ^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0700`.
